# udtrelay

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.udtrelay  aclocal.m4  checkudt.m4  configure  configure.ac
scripts/: Makefile.am  Makefile.in  udtwrap.pl
src/gate/: Makefile.am  Makefile.in
src/include/: config.h.in  getifaddrs.h  logger.h  loopbuffer.h  setproctitle.h  socket_api.h  udtgate.h  utils.h
src/lib/: Makefile.am  Makefile.in  getifaddrs.cpp  logger.cpp  setproctitle.cpp  socket_api.cpp  udtgate.cpp  utils.cpp  worker.cpp
src/minisocks/: Makefile.am  Makefile.in  minisocks.c
src/relay/: Makefile.am  Makefile.in  udtrelay.cpp
