noinst_LIBRARIES = libudtgate.a

libudtgate_a_SOURCES =  socket_api.cpp utils.cpp logger.cpp  setproctitle.cpp \
		worker.cpp getifaddrs.cpp udtgate.cpp \
		../include/socket_api.h ../include/utils.h ../include/logger.h \
		../include/setproctitle.h  ../include/getifaddrs.h ../include/loopbuffer.h 
#acl_table.cpp

noinst_HEADERS = ../include/udtgate.h
